tests/compile_fail/add/unit_struct.stderr
error: `Add` cannot be derived for unit structs
 --> tests/compile_fail/add/unit_struct.rs:2:1
  |
2 | struct Foo;
  | ^^^^^^
